burger behind bug fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,6 @@ header {
       width: 70%; }
 
 .menu-btn {
-  padding: 16px;
   margin-right: 8px;
   height: 100%;
   width: 126px;
